kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manifest-doc-service
spec:
  type: NodePort
  selector:
    app: manifest-doc
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
